= 2.0 (unreleased)
* improved performance of <tt>has_all_roles?</tt> method using subselect instead of doing one DB lookup per argument in worst case
* clean up the initializer code, detecting if it's loaded by Rails::Server or Rails::Console
* now also running on Rubinius, REE and Ruby 1.8

= 1.2 (Nov 4, 2011)
* fixed a strange bug, probably rails related (thanks to @scottkf)
  * when using rails in development mode, the <tt>config.cache_classes = false</tt> makes the role class to be loaded at every call and can lead to a <tt>AssociationTypeMismatch</tt>
  * use of <tt>role_ids</tt> array instead of the <tt>roles</tt> association
* now running on JRuby (<b>specs are still failing for JRuby though</b>)

= 1.1 (Oct 14, 2011)
* added a spec to test the rails generator using ammeter gem
* Gemfile cleanup, moved all dependencies in gemspec instead
* edited the dependency to Rails 3.1 and newer, now that Rails 3.1 has been released
* new role scoping capabilities
  * instance level : <tt>user.has_role "moderator", Forum.first</tt> (<em>already supported in previous release</em>). user has the moderator role only on that Forum in particular
  * class level : <tt>user.has_role "moderator", Forum</tt>. User has the moderator role on all instances of Forum
  * global level : <tt>user.has_role "moderator"</tt> (<em>already supported in previous release</em>). User has the moderator role globally (e.q. on all resources)
* new scoped query capabilities
  * <tt>user.has_role? "moderator", Forum.first</tt> (<em>already supported in previous release</em>). asks if the user has the moderator role on Forum.first instance
  * <tt>user.has_role? "moderator", Forum</tt>. asks if the user has the moderator role on all Forum instances
  * <tt>user.has_role? "moderator"</tt> (<em>already supported in previous release</em>). asks if the user has the global moderator role