@@ -8,7 +8,7 @@ module Rolify
       source_root File.expand_path('../templates', __FILE__)
       argument :role_cname, :type => :string, :default => "Role"
       argument :user_cname, :type => :string, :default => "User"
-      class_option :dynamic_shortcuts, :type => :boolean, :default => true
+      class_option :dynamic_shortcuts, :type => :boolean, :default => false
 
       desc "Generates a model with the given NAME and a migration file."
 
@@ -16,7 +16,7 @@ module Rolify
         template "role.rb", "app/models/#{role_cname.downcase}.rb"
         inject_into_class(model_path, user_cname.camelize) do
           "  include Rolify::Roles\n" + 
-          "#{"  extend Rolify::Reloaded\n" if options[:dynamic_shortcuts]}" + 
+          "  #{'# ' if !options[:dynamic_shortcuts]}extend Rolify::Dynamic\n" + 
           "  has_and_belongs_to_many :roles#{", :class_name => \"" + role_cname.camelize + "\"" if role_cname != "Role"}, :join_table => :#{user_cname.tableize + "_" + role_cname.tableize}\n"
         end
       end
