@@ -1,3 +1,8 @@
-Rolify.user_cname = <%= user_cname.camelize %>
-Rolify.role_cname = <%= role_cname.camelize %>
-Rolify.dynamic_shortcuts = <%= options[:dynamic_shortcuts].to_s %> if defined? Rails::Server || defined? Rails::Console
+Rolify.configure do |c|
+  # User class to put the roles association. Default is: "User"
+  <%= "# " if user_cname == "User" %>c.user_cname = "<%= user_cname %>"
+  # Role class provided by Rolify. Default is: "Role"
+  <%= "# " if role_cname == "Role" %>c.role_cname = "<%= role_cname %>"
+  # Dynamic shortcuts for Role class (user.is_admin? like methods). Default is: false
+  <%= "# " if !options[:dynamic_shortcuts] %>c.dynamic_shortcuts = <%= options[:dynamic_shortcuts] == true ? true : false %> if defined?(Rails::Server) == true || defined?(Rails::Console) == true
+end
